--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <main>
       <section class="order">
-        <div class="order-containe container">
+        <div class="order-container container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button class="btn-order" type="button">Order Service</button>
         </div>
@@ -60,6 +60,37 @@
       <section class="benefits">
         <div class="benefits-container container">
           <h2 class="benefits-title">Benefits</h2>
+
+          <ul class="benefits-icons-list">
+            <li class="benefits-icons-item">
+              <div class="benefits-icons-container">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-satelite"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="benefits-icons-item">
+              <div class="benefits-icons-container">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="benefits-icons-item">
+              <div class="benefits-icons-container">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="benefits-icons-item">
+              <div class="benefits-icons-container">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
 
           <ul class="benefits-list">
             <li class="benefits-item">
@@ -108,6 +139,36 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Mark Guerrero</h3>
                 <p class="ourteam-text">Product Designer</p>
+                <ul class="ourteam-icons-list">
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -137,9 +198,7 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Daniel Wilson</h3>
                 <p class="ourteam-text">UI Designer</p>
-              </div>
-            </li>
-          </ul>
+                
         </div>
       </section>
 
