--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <ul class="nav-ul">
             <li class="nav-item">
-              <a class="navbar" href="./index.html">Studio</a>
+              <a class="navbar studio" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="navbar" href="">Portfolio</a></li>
             <li class="nav-item"><a class="navbar" href="">Contacts</a></li>
@@ -198,7 +198,9 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Daniel Wilson</h3>
                 <p class="ourteam-text">UI Designer</p>
-                
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
