--- a/index.html
+++ b/index.html
@@ -142,28 +142,28 @@
                 <ul class="ourteam-icons-list">
                   <li class="ourteam-icons-item">
                     <a href="" target="_blank" class="soc-link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="ourteam-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="ourteam-icons-item">
                     <a href="" target="_blank" class="soc-link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="ourteam-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="ourteam-icons-item">
                     <a href="" target="_blank" class="soc-link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="ourteam-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="ourteam-icons-item">
                     <a href="" target="_blank" class="soc-link">
-                      <svg class="icon" width="16" height="16">
+                      <svg class="ourteam-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -180,6 +180,36 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Tom Ford</h3>
                 <p class="ourteam-text">Frontend Developer</p>
+                <ul class="ourteam-icons-list">
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -187,6 +217,36 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Camila Garcia</h3>
                 <p class="ourteam-text">Marketing</p>
+                <ul class="ourteam-icons-list">
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="ourteam-item">
@@ -198,6 +258,36 @@
               <div class="ourteam-subtitle-text">
                 <h3 class="ourteam-subtitle">Daniel Wilson</h3>
                 <p class="ourteam-text">UI Designer</p>
+                <ul class="ourteam-icons-list">
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="ourteam-icons-item">
+                    <a href="" target="_blank" class="soc-link">
+                      <svg class="ourteam-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -210,72 +300,114 @@
 
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio1.jpg"
-                alt="banking"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio1.jpg"
+                  alt="banking"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio2.jpg"
-                alt="payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio2.jpg"
+                  alt="payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  1 4 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio3.jpg"
-                alt="mediation"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio3.jpg"
+                  alt="mediation"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio4.jpg"
-                alt="taxi"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio4.jpg"
+                  alt="taxi"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio5.jpg"
-                alt="phone screen"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio5.jpg"
+                  alt="phone screen"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/our-portfolio6.jpg"
-                alt="smiling girl"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/our-portfolio6.jpg"
+                  alt="smiling girl"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-text-absolute">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-subtitle-text">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
