--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                   height="300"
                 />
                 <p class="portfolio-text-absolute">
-                  1 4 Stylish and User-Friendly App Design Concepts · Task
+                  14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
@@ -420,14 +420,48 @@
 
     <footer class="footer">
       <div class="footer-container container">
-        <a class="logo" href="./index.html"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-container">
+          <a class="logo" href="./index.html"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="socials-subtitle">Social media</p>
+          <ul class="footer-socials-list">
+            <li class="footer-icons-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-item">
+              <a href="" target="_blank" class="footer-soc-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
